# Prosthetic-Project

./: README.md
MPU-6050-BeagleBone/: AllDevices.h  BBBMPU6050.cpp  CMakeLists.txt  CMakeListsTest.txt  DMP-processing.cpp  DMP-processing.h  DMPprocessing.h  I2cPort.cpp  I2cPort.h  MPU6050.cpp  MPU6050.h  TestMpu6050.cpp  TestMpu6050DMP6.cpp  Thumbs.db
MPU-6050-BeagleBone/buildtest/: CMakeCache.txt  MPU6050  Makefile  cmake_install.cmake
MPU-6050-BeagleBone/data tests/: mpu stationary test2.xlsx  mpu stationary3.xlsx
